--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<section class="links">
 				<div class="links">
 					<a href=
-					https://matveisky.github.io/WebDev_Vol1/ target="_blank"><br><br>Вот тут лендинг про музыканта / </a>
-					<a href="#">Здесь должна быть другая работа / </a>
-					<a href="#">Просто прикольно </a>
+					https://matveisky.github.io/Musician-landing/ target="_blank"><br><br>Вот тут лендинг про музыканта / </a>
+					<a href=https://matveisky.github.io/American-pie/ target="_blank">Cверстанный рецепт клубничного пирога / </a>
+					<a href="#">????????</a>
 				</div>
 			</section>
 			
