--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 					<br><br>
 
 					<div class="advert">
-						<p>А вот это 
-						<a href=https://poolside.fm/ target="_blank" class="reklama">круто</a>
+						<p>А вот здесь могла бы быть ваша 
+						<a href= "#" target="_blank" class="reklama">реклама</a>
 						</p>
 					</div>
 					
